# healthcare_agent

./: .env.example  README.md  pyproject.toml
src/healthcare_agent/: app.py  init.py
src/healthcare_agent/config/: settings.py
src/healthcare_agent/core/: agent.py  health_rule.py  logger.py  memory.py  models.py  openai_client.py  prompts.py  tools.py
src/healthcare_agent/data/: schema.sql
src/healthcare_agent/integrations/: calendar.py  nutrition.py  wearable.py
test/: test_smoke.py
